--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Победители</p>
       </div>
       <div id="list">
-        <p>Список</p>
+        <p>Участники</p>
       </div>
     </div>
     <script src="js/randomizer.js"></script>
